FEAT:sorting algorithms

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>DSA</h1>
-    <script src="js/linkedlist/singlelist.js"></script>
+    <!-- <script src="js/linkedlist/singlelist.js"></script> -->
+    <script src="js/sorting/select.js"></script>
 
 </body>
 
